--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
   <!--Google Fonts-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-  <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One|Lekton|Montserrat&display=swap"
+  <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One|Lekton|Montserrat|Exo+2&display=swap"
     rel="stylesheet">
 
   <meta name="theme-color" content="#000000" />
