--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One|Lekton|Montserrat|Exo+2&display=swap"
     rel="stylesheet">
+ <!--Google Icons (web Fonts)-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
