ofte stilte spm

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,10 @@
 
   <!--Google Fonts-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-  <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One|Lekton|Montserrat|Exo+2&display=swap"
+  <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One|Lekton|Montserrat|Exo+2|Work+Sans&display=swap"
     rel="stylesheet">
- <!--Google Icons (web Fonts)-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+  <!--Google Icons (web Fonts)-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -49,7 +48,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <!-- <div id="fb-root"></div>
+  <!-- <div id="fb-root"></div>
         <script>
           window.fbAsyncInit = function() {
             FB.init({
