--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
   <!--Google Fonts-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-  <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One|Lekton|Montserrat|Exo+2|Work+Sans&display=swap"
+  <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One|Lekton|Montserrat:400,700|Exo+2|Work+Sans&display=swap"
     rel="stylesheet">
   <!--Google Icons (web Fonts)-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
